--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">49,880</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">81,725</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">task.TaskTest</td><td><a href="#m0">TasksMulitipleChoice</a></td><td rowspan="1">1565014268708</td><td rowspan="1">32629</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">task.TaskTest</td><td><a href="#m1">openDoc</a></td><td rowspan="1">1565014263001</td><td rowspan="1">5703</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">task.TaskTest</td><td><a href="#m0">TasksMulitipleChoice</a></td><td rowspan="1">1565014811596</td><td rowspan="1">39452</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">task.TaskTest</td><td><a href="#m1">openDoc</a></td><td rowspan="1">1565014805473</td><td rowspan="1">6088</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">task.TaskTest#TasksMulitipleChoice</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at pages.TasksPage.addDateMultipleChoice(TasksPage.java:289)
-	at task.TaskTest.TasksMulitipleChoice(TaskTest.java:45)
+	at pages.TasksPage.addAssigneeMultipleChoice(TasksPage.java:348)
+	at task.TaskTest.TasksMulitipleChoice(TaskTest.java:47)
 ... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">task.TaskTest#openDoc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
