--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\workspace\ICUAUTO\testng.xml</span>
+                    <span>C:\java\ICU\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -143,8 +143,8 @@
                   </a> <!-- TasksMulitipleChoice -->
                   <span class="method-name">TasksMulitipleChoice</span>
                   <div class="stack-trace">java.lang.NullPointerException
-	at pages.TasksPage.addDateMultipleChoice(TasksPage.java:289)
-	at task.TaskTest.TasksMulitipleChoice(TaskTest.java:45)
+	at pages.TasksPage.addAssigneeMultipleChoice(TasksPage.java:348)
+	at task.TaskTest.TasksMulitipleChoice(TaskTest.java:47)
 ... Removed 25 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -169,7 +169,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\workspace\ICUAUTO\testng.xml</span>
+            <span class="header-content">C:\java\ICU\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -222,16 +222,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TasksMulitipleChoice')
 data.setCell(0, 2, 'task.TaskTest')
-data.setCell(0, 3, 32629);
+data.setCell(0, 3, 39452);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'openDoc')
 data.setCell(1, 2, 'task.TaskTest')
-data.setCell(1, 3, 5703);
+data.setCell(1, 3, 6088);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 38 seconds</span>
+              <span class="suite-total-time">Total running time: 45 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -264,17 +264,17 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">openDoc</span>
-                <span class="method-start">11263 ms</span>
+                <span class="method-start">35531 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">TasksMulitipleChoice</span>
-                <span class="method-start">16970 ms</span>
+                <span class="method-start">41654 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">after</span>
-                <span class="method-start">49603 ms</span>
+                <span class="method-start">81153 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
