--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac9068">  <td>19/08/05 17:10:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TaskTest.SetUp()[pri:0, instance:task.TaskTest@4470f8a6]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1397381784</td>   <td></td> </tr>
-<tr bgcolor="ac9068">  <td>19/08/05 17:11:03</td>   <td>11258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.openDoc()[pri:1, instance:task.TaskTest@4470f8a6]">openDoc</td> 
-  <td>main@1397381784</td>   <td></td> </tr>
-<tr bgcolor="ac9068">  <td>19/08/05 17:11:08</td>   <td>16965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.TasksMulitipleChoice()[pri:2, instance:task.TaskTest@4470f8a6]">TasksMulitipleChoice</td> 
-  <td>main@1397381784</td>   <td></td> </tr>
-<tr bgcolor="ac9068">  <td>19/08/05 17:11:41</td>   <td>49598</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TaskTest.after()[pri:0, instance:task.TaskTest@4470f8a6]">&lt;&lt;after</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1397381784</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/08/05 17:19:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TaskTest.SetUp()[pri:0, instance:task.TaskTest@574b560f]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/08/05 17:20:05</td>   <td>35524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.openDoc()[pri:1, instance:task.TaskTest@574b560f]">openDoc</td> 
+  <td>main@718068661</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/08/05 17:20:11</td>   <td>41647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.TasksMulitipleChoice()[pri:2, instance:task.TaskTest@574b560f]">TasksMulitipleChoice</td> 
+  <td>main@718068661</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/08/05 17:20:51</td>   <td>81146</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TaskTest.after()[pri:0, instance:task.TaskTest@574b560f]">&lt;&lt;after</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
 </table>
