--- a/reports/extent.html
+++ b/reports/extent.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Aug 6, 2019 01:23:24 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Aug 7, 2019 07:11:14 AM</span>
 				</a>
 			</li>
 			<li>
@@ -137,10 +137,10 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>5</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='90.909%'><span class='strong'>10</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='9.091%'>1</span> others
 				</div>
 			</div>
 		</div>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Task using multiple choice</span>
-						<span class='test-time'>Aug 6, 2019 01:23:52 PM</span>
+						<span class='test-time'>Aug 7, 2019 07:11:36 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Aug 6, 2019 01:23:52 PM</span>
-	<span class='label end-time'>Aug 6, 2019 01:24:49 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 57s+494ms</span>
+	<span class='label start-time'>Aug 7, 2019 07:11:36 AM</span>
+	<span class='label end-time'>Aug 7, 2019 07:14:06 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 2m 29s+447ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,28 +179,58 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:23:55 PM</td>
+					<td class='timestamp'>7:11:39 AM</td>
 					<td class='step-details'>delete document using mulitiple choice</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:24:12 PM</td>
+					<td class='timestamp'>7:11:56 AM</td>
 					<td class='step-details'>add Tags using multiple select</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:24:23 PM</td>
+					<td class='timestamp'>7:12:08 AM</td>
 					<td class='step-details'>add Date using multiple select</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:24:32 PM</td>
+					<td class='timestamp'>7:12:16 AM</td>
 					<td class='step-details'>add assignee using multiple select</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:24:49 PM</td>
+					<td class='timestamp'>7:12:33 AM</td>
 					<td class='step-details'>add watchers using multiple select</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>7:12:52 AM</td>
+					<td class='step-details'>add status using multiple select</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>7:13:10 AM</td>
+					<td class='step-details'>status by archived</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>7:13:13 AM</td>
+					<td class='step-details'>status by all</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>7:13:57 AM</td>
+					<td class='step-details'>sort by title</td>
+				</tr>
+				<tr class='log' status='info'>
+					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+					<td class='timestamp'>7:14:01 AM</td>
+					<td class='step-details'>press on sort by status and unread</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>7:14:06 AM</td>
+					<td class='step-details'>arrow button</td>
 				</tr>
 			</tbody>
 		</table>
@@ -248,25 +278,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>5</div>
+					<div class='panel-lead'>11</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Aug 6, 2019 01:23:24 PM</div>
+					<div class='panel-lead'>Aug 7, 2019 07:11:14 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Aug 6, 2019 01:25:07 PM</div>
+			 		<div class='panel-lead'>Aug 7, 2019 07:14:09 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 1m 43s+531ms</div>
+					<div class='panel-lead'>0h 2m 54s+846ms</div>
 				</div>
 			</div>
 		</div>
@@ -287,13 +317,13 @@
 				skipParent: 0,
 				exceptionsParent: 0,
 				
-				passChild: 5,
+				passChild: 10,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
-				infoChild: 0,
+				infoChild: 1,
 				exceptionsChild: 0,
 				
 				passGrandChild: 0,
