--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85b2ec">  <td>19/08/06 13:23:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TaskTest.SetUp()[pri:0, instance:task.TaskTest@574b560f]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/06 13:23:52</td>   <td>32246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.TasksMulitipleChoice()[pri:2, instance:task.TaskTest@574b560f]">TasksMulitipleChoice</td> 
-  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/06 13:25:07</td>   <td>108091</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TaskTest.after()[pri:0, instance:task.TaskTest@574b560f]">&lt;&lt;after</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/06 13:23:37</td>   <td>17263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.openDoc()[pri:1, instance:task.TaskTest@574b560f]">openDoc</td> 
-  <td>main@718068661</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/08/07 07:11:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;tasksTest.SetUp()[pri:0, instance:task.tasksTest@7d9d1a19]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/08/07 07:11:36</td>   <td>23229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tasksTest.TasksMulitipleChoice()[pri:2, instance:task.tasksTest@7d9d1a19]">TasksMulitipleChoice</td> 
+  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/08/07 07:14:09</td>   <td>175817</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tasksTest.after()[pri:0, instance:task.tasksTest@7d9d1a19]">&lt;&lt;after</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/08/07 07:11:22</td>   <td>8362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tasksTest.openDoc()[pri:1, instance:task.tasksTest@7d9d1a19]">openDoc</td> 
+  <td>main@1386767190</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/08/07 07:12:52</td>   <td>98396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tasksTest.tasksMiddlePane()[pri:3, instance:task.tasksTest@7d9d1a19]">tasksMiddlePane</td> 
+  <td>main@1386767190</td>   <td></td> </tr>
 </table>
